refactor(system): 优化系统配置和代码质量
- 将MyBatis日志实现从StdOut改为SLF4J，统一日志管理
- 调整根日志级别从info到warn，减少冗余日志输出
- 在CustomUserDetailsServiceImpl中添加日志记录和NonNull注解
- 将测试类中的Arrays.asList替换为Collections.singletonList
- 修改DeptMapper的updateDept方法返回类型为int以支持影响行数检查
- 移除部门服务中的Redis缓存相关代码，简化依赖注入
- 在部门服务中添加详细的业务日志记录和操作结果判断
- 更新产线服务中的逻辑判断，修复更新时的名称冲突检查
- 优化日志配置文件，添加异步日志处理和更精确的日志级别控制
- 简化登录服务中的异常处理和日志记录
- 统一产品服务中的结果返回方法调用
- 更新RSA工具类的文件路径处理方式
- 优化各类测试用例的断言写法和数据准备逻辑
- 调整角色映射器的返回值类型以支持操作结果检查