@@ -16,7 +16,8 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
@@ -110,7 +111,7 @@ class LineControllerTest {
     @Test
     @DisplayName("查询所有产线")
     void testFindAll() throws Exception {
-        Result expectedResult = Result.success(Arrays.asList(testLine));
+        Result expectedResult = Result.success(Collections.singletonList(testLine));
         when(lineService.findAll()).thenReturn(expectedResult);
 
         mockMvc.perform(get("/line/findAll"))
@@ -125,7 +126,7 @@ class LineControllerTest {
     void testStatistics() throws Exception {
         LocalDate startTime = LocalDate.of(2026, 6, 1);
         LocalDate endTime = LocalDate.of(2026, 6, 10);
-        Result expectedResult = Result.success(Arrays.asList());
+        Result expectedResult = Result.success(List.of());
 
         when(lineService.statistics(startTime, endTime)).thenReturn(expectedResult);
 
